--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<body>
 		<center>
 			<h1><b><u>CURRICULUM VITAE</u></b></h1>
-			<img src="C:\Users\kiran\OneDrive\Pictures\WhatsApp Image 2021-10-09 at 8.37.16 PM.jpeg" style="border-radius:100%" height="auto" width="20%">
+			<img src="WhatsApp Image 2021-10-09 at 8.37.16 PM.jpeg" style="border-radius:100%" height="auto" width="20%">
 				</img>
 			<p style="font-size:60px;padding-left">Ratna Mondal</p>
 		</center>
